Bug 416019 - Edit Shapes Tool misbehaves while dragging/bending certain imported paths
Summary: Edit Shapes Tool misbehaves while dragging/bending certain imported paths
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-08 20:32 UTC by Cebtenzzre
Modified: 2021-04-08 10:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Reproduces the bug when opened in Krita (373 bytes, image/svg+xml)
2020-01-08 20:32 UTC, Cebtenzzre
Details
Reproducer #2 (282 bytes, image/svg+xml)
2020-01-08 23:18 UTC, Cebtenzzre
Details
Reproducer #2 with workaround applied (266 bytes, image/svg+xml)
2020-01-08 23:20 UTC, Cebtenzzre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cebtenzzre 2020-01-08 20:32:27 UTC
Created attachment 124978 [details]
Reproduces the bug when opened in Krita

SUMMARY

When using the Edit Shapes Tool to bend a curve from certain imported paths, the curve is moved to the wrong place and the undo history is corrupted.

The SVG that reproduces the issue is attached as reproducer.svg. I have been able to reproduce this simply by saving an SVG in Inkscape and opening it in Krita.

An apparent workaround is to change the viewBox attribute to viewBox="0 0 1250 750".

An apparent way to create a reproducer is to change the viewBox of an SVG saved by Krita to be smaller, e.g. viewBox="0 0 200 300".

STEPS TO REPRODUCE

1. Open reproducer.svg in Krita
2. Select the paths and ungroup them
3. Use the Edit Shapes Tool to drag one of the curves, causing it to bend
4. Repeat step 3 but drag in a different direction
5. Attempt to undo steps 3 and 4

OBSERVED RESULT

The result of bending the curve is inconsistent with the way it was moved, and often in the opposite direction.
When an undo is attempted, the shape continues to bend in directions it was not supposed to.

EXPECTED RESULT

The curve bends to where the cursor was dragged, just as it normally would.
When an undo is attempted, the previous state of the document is correctly restored.
Both of these results are observed if the workaround is applied.

SOFTWARE/OS VERSIONS

Krita: Krita Plus AppImage 4.2.9-alpha (git 0c46041)
Comment 1 Cebtenzzre 2020-01-08 22:28:25 UTC
With a different imported SVG that had the same problem, I was able to work around the issue by extracting the vector layer from the .kra and running the following command:

$ svgcleaner --no-defaults --allow-bigger-file --paths-to-relative=yes --apply-transform-to-paths=yes original.svg cleaned.svg

Then I replaced the layer in the .kra with the new SVG. This didn't work without --apply-transform-to-paths=yes so this seems to be different from (but related to) the original attached reproducer, which has no transform attributes.
Comment 2 Cebtenzzre 2020-01-08 23:18:09 UTC
Created attachment 124983 [details]
Reproducer #2

An SVG that needs a different workaround
Comment 3 Cebtenzzre 2020-01-08 23:20:05 UTC
Created attachment 124984 [details]
Reproducer #2 with workaround applied

Created with:
$ svgcleaner --allow-bigger-file --apply-transform-to-paths=yes reproducer2.svg reproducer2_workaround.svg
Comment 4 Ahab Greybeard 2020-01-09 21:15:00 UTC
I can confirm this for the Jan 08 4.3.0 prealpha appimage (git dc7d037)

For a similar vector shape created in kita, when dragging an edge to curve it, the curve stays attached to the cursor.

For 'reproducer' and 'reproducer2', the curve lags behind the cursor when dragging the curve.

Also, when dragging the curve then releasing the cursor, artifacts are produced which are part of the vector layer and cannot be removed by any layer turn off/on. The can be 'swept away' by dragging the curve so that it writes over them or by saving the file and reopening.

The curve lagging the cursor is associated with the curve moving in the opposite direction when the cursor is released.

For 'reproducer', reducing the size of the viewBox values changes the scale of the shape and also the amount by which the curve lags the cursor during dragging.
If the viewBox values are adjusted to make them much larger then the curve leads the cursor when dragging it and no artifacts are produced.
If the viewBox values are set to viewBox="0 0 575 850" then there is no lag or lead of the curve with respect to the cursor.

For reproducer2, if you manually remove the transform from the .svg file and then Import it, the shape does not have the curve lagging/leading the cursor when being dragged out and also none of the problems noted in the initial description. (It's also smaller and at the top left of the layer.) The transform in the original reproducer2 seems to be a combined translation and scale.
I suspect that the viewBox size for reproducer2 was 'just right' (for whatever reason) but that the scaling components of the transform had their own effect.

The relationship between viewBox values, path definition values and any transform effects seems to be a serious and delicate one.
Comment 5 Bug Janitor Service 2021-04-07 19:43:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/796
Comment 6 sh_zam 2021-04-07 19:48:12 UTC
Hello!

I've fixed the bug and sent it for a review. The only thing I didn't look into is the artifacts which were caused by this bug, since I couldn't reproduce them after fixing it. So, let me know if artifacts show up again.
Comment 7 Dmitry Kazakov 2021-04-08 10:52:42 UTC
Git commit b9f2edbcc205d1e2e412e547de1e169802db283c by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 08/04/2021 at 10:51.
Pushed by dkazakov into branch 'master'.

Bugfix: Edit Shapes Tool misbehave when transformations are present

`KoPathSegmentChangeStrategy` passed offset to
`KoPathControlPointMoveCommand` in Shape coordinates already.

M  +1    -1    libs/flake/commands/KoPathControlPointMoveCommand.cpp
M  +1    -1    libs/flake/commands/KoPathControlPointMoveCommand.h
M  +3    -1    libs/flake/tools/KoPathControlPointMoveStrategy.cpp
M  +1    -0    libs/flake/tools/KoPathControlPointMoveStrategy.h

https://invent.kde.org/graphics/krita/commit/b9f2edbcc205d1e2e412e547de1e169802db283c