Bugfix: Edit Shapes Tool misbehave when transformations are present

`KoPathSegmentChangeStrategy` passed offset to
`KoPathControlPointMoveCommand` in Shape coordinates already.

BUG:416019