libs/flake/commands/KoPathControlPointMoveCommand.h
@@ -22,7 +22,7 @@ public:
     /**
      * Command to move one control path point.
      * @param pointData the data of the point to move
-     * @param offset the offset by which the point is moved in document coordinates
+     * @param offset the offset by which the point is moved in shape coordinates
      * @param pointType the type of the point to move
      * @param parent the parent command used for macro commands
      */
